<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!--    Permission alert-->
    <string name="permission_location_alert_title">Location Permission Needed</string>
    <string name="permission_location_alert_message">This app needs the location permission, please accept to use location functionality!</string>

    <!--    Screen name-->
    <string name="representative_screen">Find My Representatives</string>
    <string name="login_screen">Login</string>
    <string name="elections_screen">Elections</string>
    <string name="voter_info_screen">Voter Info</string>
    <!--    Content description-->
    <string name="ballot_logo">ballot logo</string>

    <!--    App text resources-->
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="login">Login</string>
    <string name="login_benefit">Login to our app to get a full experience and personalize your own app</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_1"> Address 1</string>
    <string name="address_2"> Address 2</string>
    <string name="city"> City</string>
    <string name="zip_code"> Zip Code</string>
    <string name="use_my_location">Use my location</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="location_required">This is a location-required feature. Please turn it on.</string>
</resources>
