<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.example.android.politicalpreparedness.ui.launch.LaunchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_launchFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/representativeFragment"
        android:name="com.example.android.politicalpreparedness.ui.representative.RepresentativeFragment"
        android:label="@string/representative_screen"
        tools:layout="@layout/fragment_representative" />
    <fragment
        android:id="@+id/voterInfoFragment"
        android:name="com.example.android.politicalpreparedness.ui.election.VoterInfoFragment"
        android:label="@string/voter_info_screen"
        tools:layout="@layout/fragment_voter_info">
        <argument
            android:name="arg_election_id"
            app:argType="integer" />
        <argument
            android:name="arg_division"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/electionsFragment"
        android:name="com.example.android.politicalpreparedness.ui.election.ElectionsFragment"
        android:label="@string/elections_screen"
        tools:layout="@layout/fragment_election">
        <action
            android:id="@+id/action_electionsFragment_to_voterInfoFragment"
            app:destination="@id/voterInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.android.politicalpreparedness.ui.login.LoginFragment"
        android:label="@string/login_screen"
        tools:layout="@layout/fragment_login">
        <argument
            android:name="screenTo"
            app:argType="integer" />
        <action
            android:id="@+id/action_loginFragment_to_representativeFragment"
            app:destination="@id/representativeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_electionsFragment"
            app:destination="@id/electionsFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
