<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ivBallotLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ballot_logo"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@id/btnUpcomingElections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUpcomingElections"
            style="@style/MyButton"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/btnFindMyRepresentatives"
            app:layout_constraintEnd_toEndOf="@id/ivBallotLogo"
            app:layout_constraintStart_toStartOf="@id/ivBallotLogo" />

        <Button
            android:id="@+id/btnFindMyRepresentatives"
            style="@style/MyButton"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ivBallotLogo"
            app:layout_constraintStart_toStartOf="@id/ivBallotLogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>