<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.ui.election.VoterInfoViewModel" />

        <variable
            name="sharedViewModel"
            type="com.example.android.politicalpreparedness.common.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/election_date"
            style="@style/Body1"
            android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/Label"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations_header"
            style="@style/Body1"
            android:layout_marginVertical="@dimen/default_margin"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot_header"
            style="@style/Body1"
            android:layout_marginVertical="@dimen/large_margin"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_locations_header" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{sharedViewModel.sharedAddress}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot_header" />

        <Button
            android:id="@+id/btnFollow"
            style="@style/MyButton"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>