<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ivBallotLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLoginBenefit"
            android:src="@drawable/ballot_logo"
            android:contentDescription="@string/ballot_logo" />

        <TextView
            android:id="@+id/tvLoginBenefit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:text="@string/login_benefit"
            android:textSize="@dimen/large_text_size"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/ivBallotLogo"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/MyButton"
            android:text="@string/login"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@id/ivBallotLogo"
            app:layout_constraintEnd_toEndOf="@id/ivBallotLogo"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>